<resources>
    <string name="app_name">LabsCM20201-Gr02</string>
    <string name="personal_info">Información Personal</string>
    <string name="telefono">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="email">Email</string>
    <string name="pais">País</string>
    <string name="ciudad">Ciudad</string>
    <string name="siguiente">Siguiente</string>
    <string name="cambiar">Cambiar</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="nacimiento">Nacimiento:</string>
    <string name="dd_mm_aaaa">DD/MM/AAAA</string>
    <string name="sexo">Sexo:</string>
    <string name="todo">TODO</string>
    <string name="informacion_de_contacto">Información de Contacto</string>
    <string name="grado">Grado de escolaridad</string>
    <string name="primaria">Primaria</string>
    <string name="secundaria">Secundaria</string>
    <string name="universitaria">Universitaria</string>
    <string name="otro">Otro</string>
</resources>