<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactData">

    <TextView
        android:id="@+id/textView_ContactData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/informacion_de_contacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPhone_Contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:autofillHints="@string/telefono"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone"
        android:text="@string/telefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewIconPhone"
        app:layout_constraintTop_toBottomOf="@+id/textView_ContactData"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:autofillHints="@string/email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toEndOf="@+id/imageViewIconEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone_Contact" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:hint="@string/pais"
        android:text="@string/pais"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewCountry"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView_city"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:hint="@string/ciudad"
        android:text="@string/ciudad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toEndOf="@+id/imageViewCity"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextText_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:autofillHints="@string/direccion"
        android:ems="10"
        android:hint="@string/direccion"
        android:inputType="textPersonName"
        android:text="@string/direccion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toEndOf="@+id/imageViewDireccion"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView_city" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:text="@string/siguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText_address" />

    <ImageView
        android:id="@+id/imageViewIconEmail"
        android:layout_width="29dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewIconPhone"
        app:srcCompat="@drawable/newemailoutlinesymbolinblackcircularbutton_104753" />

    <ImageView
        android:id="@+id/imageViewCity"
        android:layout_width="32dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCountry"
        app:srcCompat="@drawable/city16_42513" />

    <ImageView
        android:id="@+id/imageViewCountry"
        android:layout_width="30dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewIconEmail"
        app:srcCompat="@drawable/bandera" />

    <ImageView
        android:id="@+id/imageViewDireccion"
        android:layout_width="32dp"
        android:layout_height="33dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCity"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/location_pin_place_map_address_placeholder_icon_149098" />

    <ImageView
        android:id="@+id/imageViewIconPhone"
        android:layout_width="30dp"
        android:layout_height="29dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/telephone_symbol_button_icon_icons_com_73379" />

</android.support.constraint.ConstraintLayout>